# mobile_robotics

./: .gitignore
hw1/: CMakeLists.txt  package.xml
hw1/src/: hw1.cpp
hw2/: CMakeLists.txt  README.md  package.xml
hw2/assets/: mapping-small.txt  real.txt  test_points_1.txt  test_points_2.txt  test_points_3.txt  test_points_4.txt
hw2/include/hw2/: move.hpp
hw2/src/: goto.cpp  move.cpp  utils.cpp
hw3/: CMakeLists.txt  package.xml
hw3/include/hw3/: Robot.hpp  utils.hpp
hw3/src/: Robot.cpp  safegoto.cpp
hw4/: CMakeLists.txt  README.md  package.xml
hw4/include/hw3/: Robot.hpp
hw4/src/: Robot.cpp  safegoto.cpp  utils.cpp
hw5/: CMakeLists.txt  README.md  package.xml
hw5/include/hw5/: maputils.hpp
hw5/src/: mapper.cpp  mapper.py  maputils.cpp
kevin/src/: .safegoto.py.swl  .safegoto.py.swm  .safegoto.py.swn  .safegoto.py.swo  safegoto.py  test.txt
scripts/: example_guassian.py
sonarsim/: CMakeLists.txt  package.xml
sonarsim/src/: sonarsim.py
